[package]
name = "ircc"
version = "0.1.0"
edition = "2021"

license = "GPL-3.0-only"
description = "Low-level IRC client"
repository = "https://github.com/vinezombie/ircc"
readme = "README.md"
keywords = ["irc", "ircv3"]

[[bin]]
name = "ircc"
path = "src/main.rs"

# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_yaml = "0.9.22"
tokio = { version = "1.29.1", features = ["rt", "macros", "io-std", "io-util"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17" }

[dependencies.vinezombie]
git = "https://github.com/vinezombie/vinezombie"
rev = "f3cabd54097e86aff8700e744d88bd8c2d4c76a7"
version = "0.1.0"
features = ["serde", "tracing"]
