[package]
name = "ircc"
version = "0.1.0"
edition = "2021"

license = "GPL-3.0-only"
description = "Low-level IRC client"
repository = "https://github.com/vinezombie/ircc"
readme = "README.md"
keywords = ["irc", "ircv3"]

[[bin]]
name = "ircc"
path = "src/main.rs"

# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.11", features = ["derive"] }
rustyline = "12.0.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_yaml = "0.9.22"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["rt", "macros", "io-std", "io-util", "sync"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17" }

[dependencies.vinezombie]
version = "0.1.0"
features = ["serde", "tracing"]
